--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
     <div class="tag">Confidential</div>
     <div class="divider"></div>
     <div class="label">Patient</div>
-    <div class="content">One (1) very lucky boyfriend</div>
+    <div class="content">One (1) very lucky Pa</div>
     <div class="label">Attending Physician</div>
-    <div class="content">You 🩺</div>
+    <div class="content">Dr.Syahirah Sahabudeen 🩺</div>
     <div class="btn-container">
         <button onclick="next()">Open Case</button>
     </div>
@@ -189,8 +189,8 @@
         <div class="tag">Ongoing</div>
         <div class="divider"></div>
         <div class="content">
-            Persistent warmth in the chest area when thinking about one
-             incredibly intelligent, kind, and beautiful future doctor.
+           Rombeh Persistentaana warmth in the chest area when thinking about one
+           incredibly intelligent, kind, and beautiful future doctor.
         </div>
         <div class="btn-container">
             <button onclick="next()">Review Symptoms</button>
@@ -204,7 +204,7 @@
             • Smiling for no reason<br>
             • Feeling calm just by hearing your voice<br>
             • Wanting to share every good moment with you<br>
-            • Complete certainty that you're my favorite person
+            • Complete certainty that you're my Allah sent person
         </div>
         <div class="btn-container">
             <button onclick="next()">Assessment</button>
@@ -303,4 +303,5 @@
     }
   </script>
 </body>
+
 </html>
