--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
     <div class="tag">Confidential</div>
     <div class="divider"></div>
     <div class="label">Patient</div>
-    <div class="content">One (1) very lucky boyfriend</div>
+    <div class="content">One (1) very lucky Pa</div>
     <div class="label">Attending Physician</div>
-    <div class="content">You 🩺</div>
+    <div class="content">Dr.Syahirah Sahabudeen🩺</div>
     <div class="btn-container">
         <button onclick="next()">Open Case</button>
     </div>
@@ -189,7 +189,7 @@
         <div class="tag">Ongoing</div>
         <div class="divider"></div>
         <div class="content">
-            Persistent warmth in the chest area when thinking about one
+            Rombeh persistentaana warmth in the chest area when thinking about one
              incredibly intelligent, kind, and beautiful future doctor.
         </div>
         <div class="btn-container">
@@ -258,10 +258,10 @@
         <div class="content">
             <strong>Date:</strong> February 14<br>
             <strong>Time:</strong> 8:00 PM<br>
-            <strong>Location:</strong> FaceTime<br><br>
+            <strong>Location:</strong> Videocall<br><br>
             Side effects may include: Battery drainage, endless smiling, 
-            and counting down the days until we finally reunite.<br><br>
-            I can't wait to see your face on my screen 💖
+            and counting down the days until we finally reunite my Allah sent person.<br><br>
+            I can't wait to see your face on my screen Ma 💖
         </div>
         `
     ];
@@ -303,4 +303,5 @@
     }
   </script>
 </body>
+
 </html>
